various tasks 2/06 monday evening